--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ typenum = "1.10"
 az = { version = "0.3", optional = true }
 half = { version = "1.4", optional = true }
 serde = { version = "1.0.60", default-features = false, optional = true }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 [dependencies.codec]
 default-features = false
