Change forked typenum to original

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ fail-on-warnings = []
 std = []
 
 [dependencies]
-typenum = { git = "https://github.com/equilibrium-eosdt/typenum", branch="scale-info", version="1.14.1", default-features = false, features = ["scale_info"] } 
+typenum = { version = "1.15.0", default-features = false, features = ["scale_info"] } 
 az = { version = "0.3", optional = true }
 half = { version = "1.4", optional = true }
 serde = { version = "1.0.60", default-features = false, optional = true }
